# Scratchpad

./: .deepsource.toml  .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  requirements-extra.txt  requirements.txt
.github/ISSUE_TEMPLATE/: new-model-architecture.md
.github/workflows/: ci.yml
docker/: Dockerfile.aarch64-cuda  Dockerfile.amd64-cuda  Dockerfile.arm-cuda  Dockerfile.x86_64-cuda  build_image.py  build_image.sh  create_manifest.sh  grafana.json  monitor.yaml  prometheus.yaml  test_image.sh
docs/: astro.config.mjs  cli.md  diff_openai.md  package-lock.json  package.json
docs/examples/: batch.py  mllama_request.py  router.py  tool_calls.py
docs/sources/: cli.md  conf.py  diff_openai.md  index.md  quick_start.md  toppings.md
meta/: requirements-additional.txt  requirements-benchmark.txt  requirements-cuda.txt  requirements-dev.txt  requirements-extra.txt  requirements.txt
meta/docker/: Dockerfile.aarch64-cuda  Dockerfile.multistage.x86_64-cuda  Dockerfile.stage1  Dockerfile.x86_64-cuda  grafana.json  monitor.yaml  test_image.sh
meta/monitoring/: prometheus.yaml
scratchpad/cli/: generate.py  generate_openai.py  route.py  sp.py  spc.py
scratchpad/config/: __init__.py  cache_config.py  device_config.py  load_config.py  modality_config.py  model_config.py  topping_config.py  utils.py  vllm_model_config.py
scratchpad/constrained/: __init__.py  base_backend.py  base_tool_cache.py  bnf_cache.py  fsm_cache.py  func_calls.py  grammar.py  jump_forward.py  outlines_backend.py  outlines_jump_forward.py  xgrammar_backend.py
scratchpad/distributed/: __init__.py  parallel_state.py  utils.py
scratchpad/managers/: __init__.py  controller.py  controller_single.py  detokenizer.py  engine_state.py  image_processor.py  structs.py  tokenizer.py  topping_manager.py  toppings_manager.py  tp_worker.py  tp_worker_client.py  utils.py
scratchpad/memory/: __init__.py  chunk_cache.py  het_pool.py  param_offload.py  pool.py  radix_cache.py  topping_pool.py
scratchpad/model_executor/: cuda_graph_runner.py  custom_op.py  deltazip_loader.py  forward_info.py  model_loader.py  model_runner.py  parameter.py  utils.py
scratchpad/nn/: mm_utils.py  parameter.py  utils.py
scratchpad/sampling/: sampling_batch_info.py  sampling_params.py
scratchpad/scheduler/: policy_scheduler.py  schedule_batch.py  scheduler.py  stats.py  utils.py
scripts/: install-base.sh  install-deps.sh  prepare_shepherd.sh  serve_llama_1b.sh  serve_llama_1b_embeddings.sh  serve_llama_1b_triton.sh  serve_llama_1b_with_controller.sh  serve_llama_1b_with_toppings.sh  serve_llama_1b_with_toppings_torch.sh  serve_llama_3b.sh  serve_llama_8b.sh  serve_mllama_11b.sh  serve_mllama_11b_docker.sh
tests/: hf_processor.py
(+211 files in other folders)
