[project]
name = "scratchpad"
version = "0.0.1"
description = "scratchpad"
authors = [{ name = "Xiaozhe Yao", email = "askxzyao@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["dependencies", "optional-dependencies"]

[tool.flake8]
max-line-length = 120

[project.scripts]
sp = "scratchpad.cli.sp:app"

[tool.setuptools]
packages = ["scratchpad"]

[tool.setuptools.dynamic]
dependencies = {file = ["meta/requirements.txt"]}
optional-dependencies.extra = { file = ["meta/requirements-extra.txt"] }
optional-dependencies.dev = { file = ["meta/requirements-dev.txt"] }
optional-dependencies.benchmark = { file = ["meta/requirements-benchmark.txt"] }

[tool.pytest.ini_options]
testpaths = "tests"  # directory containing your tests
norecursedirs = [
    ".vscode",
    "__pycache__"
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
markers = [
    "slow: lower-importance tests that take an excessive amount of time",
]
